<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.howest.nmct.demolaunchingactivities.ExplicitActivity">

    <TextView android:text="@string/explicit" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitleExplicit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:id="@+id/btnOK"
        android:layout_below="@id/txtTitleExplicit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnOK"
        android:text="@string/Cancel"
        android:id="@+id/btnCancel"
        android:layout_below="@id/txtTitleExplicit"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnCancel"
        android:text="@string/Copyright"
        android:id="@+id/btnCopyright"
        android:layout_below="@id/txtTitleExplicit"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>
