<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/OpenExplicit"
        android:id="@+id/btnStartExplicitActivity"
        android:layout_below="@id/txtTitle"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ToonDialoog"
        android:id="@+id/btnStartAlertDialog"
        android:layout_below="@id/btnStartExplicitActivity"/>

</RelativeLayout>
